--- a/week02/styles/styles.css
+++ b/week02/styles/styles.css
@@ -1,17 +1,55 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
+header, .grid, footer{
+  max-width: 840px;
+  margin: 0 auto;
+}
+
+.grid{
+  display: grid;
+  align-items: center;
+}
 nav {
   background-color: steelblue;
   padding: 10px;
+}
+
+main{
+  grid-column: 2/3;
+  margin: 1rem;
+}
+aside{
+  width: 20rem;
+  position: relative;
+  grid-column: 1/2;
+  grid-row: 1/2;
+}
+nav{
+  background-color: steelblue;
+  padding: 1rem;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 nav a {
   color: white;
   display: block;
   padding: 20px;
+  text-decoration: none;
+  font-size: 1.2rem;
+  font-weight: 700;
 }
 
 h1 {
   color: steelblue;
+  padding: 10px;
+  border-bottom: 1px solid steelblue;
+  margin: 10px;
 }
 
 main img {
@@ -20,14 +58,12 @@ main img {
   border: 1px solid steelblue;
   padding: 2px;
   box-shadow: 0 0 30px gray;
+  float: right;
+  margin: 0 0 1rem 1rem;
 }
 
 p {
-  padding: 0;
-}
-
-main {
-  max-width: 840px;
+  padding: 10;
 }
 
 aside {
@@ -39,14 +75,27 @@ aside {
   color: #333;
   text-align: center;
 }
+.box{
+    margin: 1rem;
+    border: 1px solid rgba(0, 0, 0, .1);
+    padding: 1.5rem;
+    background-color: #ddd;
+    color: rgb(10, 4, 1);
+}
 
 aside img {
-  width: 200px;
+  width: 250px;
   height: auto;
+}
+
+aside h2{
+  position: absolute;
+  top: 25px;
+  left: 50px;
 }
 
 footer {
   margin-top: 15px;
-  border-top: 1px solid #000;
+  border-top: 1px solid #bd1515;
   text-align: center;
 }
