--- a/styles/styles.css
+++ b/styles/styles.css
@@ -37,12 +37,12 @@ nav{
 }
 
 nav a {
-  color: white;
   display: block;
-  padding: 20px;
+  padding: 0.5rem;
   text-decoration: none;
   font-size: 1.2rem;
   font-weight: 700;
+  color: #fff;
 }
 
 h1 {
@@ -63,7 +63,7 @@ main img {
 }
 
 p {
-  padding: 10;
+  padding: 10px;
 }
 
 aside {
