--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -10,16 +10,23 @@ body {
     font-family: 'Roboto', sans-serif;
     color: var(--text-color);
     margin: 0;
-    padding: 0;
     max-width: 1200px;
+    padding: 0;
     margin: 0 auto;
 }
 
-header {  
+header {
+    display: flex;
     justify-content: space-between;
-    padding: 1rem;
+    align-items: center;
+    padding: 1rem 8rem;
     background-color: var(--primary-color);
     color: white;
+}
+
+header img {
+    width: 200px;
+    height: 150px;
 }
 
 nav a {
@@ -72,22 +79,63 @@ nav a {
 
 }
 
-section {
-    padding: 2rem;
-}
-section h2{
-    color: rgba(200, 200, 9, 0.93);
-}
-footer {
+.center {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-content: center;
+    gap: 1rem;
     text-align: center;
+}
+
+.list {
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
+
+}
+
+section img {
+    width: 150px;
+    height: 150px;
+}
+
+
+section h2 {
+    color: rgba(200, 200, 9, 0.766);
+    display: grid;
+    justify-content: center;
+}
+
+.center-image {
+    width: 300px;
+    height: 200px;
+    padding: 0;
+    margin: 0;
+}
+
+footer {
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
     padding: 1rem;
     background-color: var(--primary-color);
     color: white;
+
 }
 
 footer a {
     text-decoration: none;
 }
+.text {
+    grid-column-start: 2;
+    text-align: center;
+}
+
+.icon {
+    grid-column-start: 3;
+    text-align: end;
+}
+
+
 
 footer img {
     margin: 0 0.5rem;
