--- a/styles/quiz.css
+++ b/styles/quiz.css
@@ -36,7 +36,6 @@ form {
     background-color: #fff;
     padding: 40px;
     border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     width: 100%;
     max-width: 400px;
 }
@@ -45,6 +44,11 @@ form {
     margin-bottom: 15px;
 }
 
+.margin-img{
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+}
 label {
     display: block;
     margin-bottom: 5px;
